# mcprojsim

./: .dockerignore  .flake8  .gitignore  404.html  CHANGELOG.md  Customer Portal Redesign_results.csv  Customer Portal Redesign_results.html  Customer Portal Redesign_results.json  Dockerfile  Dockerfile.docs  MANIFEST.in  Makefile  Mobile App Development_results.csv  Mobile App Development_results.html  Mobile App Development_results.json  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  api_example_results.html  api_example_results.json  docker-compose.yml  index.html  mcprojsim-docs.sh  mcprojsim.sh  mcprojsim_reqs.md  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  sitemap.xml  todo.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml
CHANGELOG/: index.html
QUICKSTART/: index.html
api_reference/: api_ref_template.tex  api_ref_template_a4.tex  api_ref_template_b5.tex  api_ref_template_dark.tex  api_ref_template_dark_a4.tex  api_ref_template_dark_b5.tex  index.html
api_reference/01_intro/: index.html
api_reference/02_core/: index.html
api_reference/03_project_model/: index.html
api_reference/04_simulation_results/: index.html
api_reference/05_parsers/: index.html
api_reference/06_configuration/: index.html
api_reference/07_exporters/: index.html
api_reference/08_analysis_helpers/: index.html
api_reference/09_validation_utilities/: index.html
api_reference/10_nl_parser/: index.html
api_reference/11_api_examples/: index.html
assets/: cover-api-ref.html  cover-api-ref.trim  cover-user-guide.html  cover-user-guide.trim  fig-lognormal-graph.html  fig-lognormal-graph.trim  fig-user-guide-cover.html  fig-user-guide-cover.trim
benchmarks/: bench_parallel.py
configuration/: index.html
design-ideas/: Makefile  README.md  actions-after-review.md  baysian_example_pred.py  design_template.tex  design_template_dark.tex  handling-cost.md  mcmc-ideas.md  mcprojsim_reqs.md  multi-phased-simulation.md  multiphase-simulation.md  new-pipelines.md  nl_mcp_improvements.md  parallel-sim.md  pipeline-design.md  pluggable-distributions.md  probabilistic-testing.md  report_template.tex  sensitivity-analysis.md  sprint-based-planning.md  sprint_historic_metrics.json  tshirt-categories.md  ui-design.md  ui-web-design.md
design-ideas/new-pipeline/: README.md  ci.yml  docs.yml  mkrelease-small.sh  release.yml
design-ideas/new_user/: README.md
development/: index.html
docs/: Makefile  README.md  admonitions.lua  api_reference.md  configuration.md  development.md  examples.md  examples_template.md  getting_started.md  grammar.md  index.md  mcprojsim_reqs.md  quickstart.md
docs/api_reference/: 01_intro.md  02_core.md  03_project_model.md  04_simulation_results.md  05_parsers.md  06_configuration.md  07_exporters.md  08_analysis_helpers.md  09_validation_utilities.md  10_nl_parser.md  11_api_examples.md  api_ref_template.tex  api_ref_template_a4.tex  api_ref_template_b5.tex  api_ref_template_dark.tex  api_ref_template_dark_a4.tex  api_ref_template_dark_b5.tex
docs/user_guide/: 01_getting_started.md  02_introduction.md  03_your_first_project.md  04_uncertainty_factors.md  05_task_estimation.md  06_risks.md  07_cost_handling.md  08_project_files.md  09_sprint_planning.md  10_constrained.md  11_multi_phase_simulation.md  12_running_simulations.md  13_interpreting_results.md  14_configuration.md  15_nl_processing.md  16_mcp-server.md  17_application_ui.md  configuration.md  constrained.md  cost_handling.md  getting_started.md  interpreting_results.md  introduction.md  mcp-server.md  multi_phase_simulation.md  nl_processing.md  pagebreaks.lua  project_files.md  project_risks.md  report_template.tex  risks.md  (+12 more)
examples/: api_example.py  constrained_portal.yaml  constrained_sickness_defaults_config.yaml  constrained_sickness_duration_demo.yaml  contention.yaml  cost_advanced.yaml  cost_budget_confidence.yaml  cost_complex_fintech.yaml  cost_complex_healthcare.yaml  cost_constrained.yaml  cost_nl_example.txt  cost_nl_generated.yaml  cost_nl_prose_example.txt  cost_nl_risk_example.txt  free_text_project.txt  hoursperday_test.yaml  index.html  large_project_100_tasks.yaml  mixed_task_estimates.yaml  multi_category_config.yaml  multi_category_project.yaml  nl_approximate_estimates.txt  nl_bracket_numbered.txt  nl_bullet_list.txt  nl_constrained_example.txt  nl_example.txt  nl_fuzzy_durations.txt  nl_mixed_inline.txt  nl_numbered_list.txt  nl_prose_dependencies_auto.txt  nl_prose_dependencies_explicit.txt  nl_relative_dates_and_dependencies.txt  project_with_custom_thresholds.yaml  quickstart_description.txt  quickstart_example.yaml  quickstart_project.yaml  readme_example.yaml  resource_cap_large_task.yaml  resource_cap_small_task.yaml  sample_config.yaml  (+21 more)
examples_template/: index.html
getting_started/: index.html
grammar/: index.html
mcprojsim_reqs/: index.html
quickstart/: index.html
scripts/: README.md  docs-contctl.sh  expand-shell-outputs.py  gen-examples.sh  gen_nb_sickness_example.py  mcp_bundle_README.md.template  mkblbd.sh  mkbld.sh  mkchlogentry.sh  mkcover.sh  mkcovupd.sh  mkdocs.sh  mkfigs.sh  mkghrelease.sh  mkmcpbundle.sh  mkragged.sh  mkrelease.sh  mkrelease2.sh  pandoc_sprint_planning_table_widths.lua  verify_setup.sh
search/: search_index.json
tests/: __init__.py  conftest.py  test_analysis.py  test_cli.py  test_cli_integration.py  test_cli_output.py  test_config.py  test_cost.py  test_coverage_gaps.py  test_coverage_gaps2.py  test_doc_examples_p1.py  test_e2e_combinations.py  test_exchange_rates.py  test_exporters.py  test_init.py  test_integration.py  test_mcp_server.py  test_models.py  test_new_features.py  test_nl_parser.py  test_parallel_simulation.py  test_parsers.py  test_results.py  test_simulation.py  test_sprint_gap_closure.py  test_staffing.py  test_two_pass_simulation.py  test_ui_smoke.py  test_utils.py
tmp/: qq.yaml
user_guide/: pagebreaks.lua  report_template.tex  report_template_b5.tex  report_template_dark_b5.tex  userguide_template_b5.tex  userguide_template_dark_a4.tex
(+227 files in other folders)
