[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcprojsim"
version = "0.0.1"
description = "Monte Carlo simulation system for software development effort estimation"
readme = "README.md"
authors = [
    {name = "Johan Persson", email = "johan162@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0; python_version<'3.11'",
    "tomli-w>=1.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "black>=25.9.0",
    "mypy>=1.0.0",
    "flake8>=7.3.0",
    "pre-commit>=4.3.0",
    "types-PyYAML>=6.0.0",
    "pandas-stubs>=2.0.0",
    "jinja2>=3.0.0",
    "wheel>=0.40.0",
    "setuptools>=80.9.0",
    "build>=1.3.0",
    "twine>=6.2.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]

[project.scripts]
mcprojsim = "mcprojsim.cli:cli"

[project.urls]
Homepage = "https://github.com/johan162/mcprojsim"
Repository = "https://github.com/johan162/mcprojsim"
Documentation = "https://github.com/johan162/mcprojsim/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcprojsim = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=mcprojsim",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
