[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mcprojsim"
version = "0.13.0"
description = "Monte Carlo simulation system for software development effort estimation"
readme = "README.md"
authors = ["Johan Persson <johan162@gmail.com>"]
license = "MIT"
homepage = "https://github.com/johan162/mcprojsim"
repository = "https://github.com/johan162/mcprojsim"
documentation = "https://github.com/johan162/mcprojsim/docs"
keywords = ["monte-carlo", "simulation", "project-management", "estimation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
    "Typing :: Typed",
]
packages = [{include = "mcprojsim", from = "src"}]
include = ["src/mcprojsim/py.typed"]

[tool.poetry.dependencies]
python = ">=3.13"
numpy = ">=2.4.4"
pyyaml = ">=6.0"
tomli-w = ">=1.0.0"
pydantic = ">=2.0.0"
click = ">=8.0.0"
jinja2 = ">=3.0.0"
scipy = ">=1.17.1"
matplotlib = ">=3.5.0"
tabulate = "^0.10.0"
pyright = "^1.1.408"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3"
pytest-cov = ">=7.1.0"
pytest-xdist = ">=3.8.0"
black = ">=26.3.1"
mypy = ">=1.20.0"
flake8 = ">=7.3.0"
pyright = ">=1.1.400"
pre-commit = ">=4.3.0"
types-PyYAML = ">=6.0.12"
twine = ">=6.0.0"
types-tabulate = "^0.10.0.20260308"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.5.0"
mkdocs-material = ">=9.7.6"
mkdocstrings = {extras = ["python"], version = ">=0.22.0"}

[tool.poetry.group.mcp]
optional = true

[tool.poetry.group.mcp.dependencies]
mcp = {version = ">=1.0.0", extras = ["cli"]}

[tool.poetry.scripts]
mcprojsim = "mcprojsim.cli:cli"
mcprojsim-mcp = "mcprojsim.mcp_server:main"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
check_untyped_defs = false

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportUntypedFunctionDecorator = false
reportUntypedBaseClass = false
reportUnknownLambdaType = false
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "heavy: long-running integration tests that can be excluded in CI/CD",
    "probabilistic: statistical verification tests for the simulation engine",
    "probabilistic_full: full probabilistic verification suite (very slow, run periodically)",
]
addopts = [
    "--strict-markers",
    "-m",
    "not heavy and not probabilistic and not probabilistic_full",
    "--cov=mcprojsim",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
